Fix container tab line not showing
See #204
Line turns into dot when tab is selected

--- a/chrome/tabbar/tabbar.css
+++ b/chrome/tabbar/tabbar.css
@@ -494,6 +494,38 @@
 	margin-inline-end: 8px !important;
 }
 
+.tabbrowser-tab[usercontextid] > .tab-stack::after
+{
+	content: "" !important;
+	position: absolute !important;
+	display: flex !important;
+	bottom: 0 !important;
+	left: 8px !important;
+	width: calc(100% - 16px) !important;
+	height: 2px !important;
+	box-sizing: border-box !important;
+	border-radius: 99px 99px 0 0 !important;
+	transform: none !important;
+	background: var(--identity-tab-color) !important;
+	transition-property: top, bottom, left, right, width, height, border-radius;
+	transition-duration: .225s !important;
+	transition-timing-function: var(--ease-out) !important;
+}
+
+.tab-bottom-line
+{
+	display: none !important;
+}
+
+.tabbrowser-tab[usercontextid][selected] > .tab-stack::after
+{
+	bottom: calc(100% - 9px) !important;
+	left: calc(100% - 9px) !important;
+	width: 6px !important;
+	height: 6px !important;
+	border-radius: 99px !important;
+}
+
 /* < 72 */
 #tabbrowser-tabs .arrowscrollbox-overflow-start-indicator,
 #tabbrowser-tabs .arrowscrollbox-overflow-end-indicator,
